# OsirisAndExtra

./: .gitattributes  CMakeLists.txt  Osiris.sln  README.md
Source/: AntiDetection.cpp  AntiDetection.h  CMakeLists.txt  Config.cpp  Config.h  ConfigStructs.cpp  ConfigStructs.h  EventListener.cpp  GUI.cpp  GUI.h  GameData.cpp  GameData.h  Helpers.cpp  Helpers.h  Hooks.cpp  Hooks.h  InputUtil.cpp  Interfaces.h  JsonForward.h  Logger.cpp  Memory.cpp  Memory.h  Netvars.cpp  Osiris.vcxproj  Osiris.vcxproj.filters  imguiCustom.cpp  pch.h
Source/Hacks/: AimbotFunctions.cpp  Animations.h  AntiAim.cpp  Backtrack.cpp  Backtrack.h  CMakeLists.txt  Chams.cpp  Chams.h  EnginePrediction.cpp  EnginePrediction.h  Glow.cpp  GrenadePrediction.cpp  GrenadePrediction.h  Knifebot.cpp  Misc.cpp  Misc.h  SkinChanger.cpp  SkinChanger.h  Sound.cpp  StreamProofESP.cpp  Tickbase.cpp  Visuals.cpp
Source/Hooks/: CMakeLists.txt  MinHook.cpp  MinHook.h  VmtHook.cpp  VmtHook.h  VmtSwap.cpp  VmtSwap.h
Source/InventoryChanger/: CMakeLists.txt  EconRarities.h  InventoryChanger.cpp  InventoryChanger.h  InventoryConfig.cpp  InventoryConfig.h  SkinChanger.cpp  WeaponNames.cpp  WeaponNames.h
Source/InventoryChanger/Backend/: BackendSimulator.h  CMakeLists.txt  Item.h  ItemIDMap.h  Items.h  Loadout.h  PickEm.h  StorageUnitManager.h  XRayScanner.h
Source/InventoryChanger/GameIntegration/: CMakeLists.txt  CrateLoot.cpp  CrateLoot.h  Inventory.cpp  Inventory.h  Items.cpp  Items.h  Misc.h
Source/InventoryChanger/GameItems/: CMakeLists.txt  CrateLoot.h  CrateLootLookup.h  Enums.h  Item.h  ItemSorter.h  Lookup.h  Storage.cpp  Storage.h  (+1 more)
Source/SDK/: CMakeLists.txt  ClientClass.h  ClientMode.h  ConVar.h  EconItemView.cpp  EconItemView.h  Entity.h  ItemSchema.h  Localize.h  MoveHelper.h  NetworkChannel.h  PanoramaMarshallHelper.h  PlayerResource.h  Recv.h  SoundInfo.h  UtlMap.h  VirtualMethod.h  WeaponId.h
Source/freetype/: CMakeLists.txt.txt
(+55 files in other folders)
